Fix SVG size on Safari and mobile Chrome.

--- a/css/figure.css
+++ b/css/figure.css
@@ -32,8 +32,8 @@
 }
 
 .diagram {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .line {
